--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -47,9 +47,25 @@ a {
 }
 
 /* ===================
-        Typography
+        images
     =================== */
 
 img {
   border-radius: 5px;
+}
+
+/* ===================
+        input
+    =================== */
+
+input {
+  width: 100%;
+  border: solid #333 2px;
+  border-radius: 5px;
+  margin-top: 0.5em;
+  padding: 0.5em 0.875em;
+}
+
+label {
+  padding: 1em;
 }
